# pi_temp_controller

./: Cargo.toml  Dockerfile  Dockerfile.controller  build.sh  install_k3s.sh  settings.yaml
.cargo/: config.toml
src/: controller.rs  crdgen.rs  crds.rs  daemonset.rs  errors.rs  main.rs
