[package]
name = "pi_temp_controller"
version = "0.1.0"
authors = ["Christopher Valerio <christopher@valerio.guru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[[bin]]
doc = false
name = "controller"
path = "src/controller.rs"

[[bin]]
doc = false
name = "pi_temp_controller"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.9", features = ["derive"] }
rust_gpiozero = "0.2.1"
tokio = { version = "1", features = ["full"] }
kube = { version = "0.75.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
thiserror = "1.0.36"
schemars = "0.8.10"
serde = "1.0.145"
serde_json = "1.0.85"
tracing = "0.1.36"
futures = "0.3.24"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.15"
rustls = "0.20.6"
serde_yaml = "0.9.13"
tokio-rustls = "0.23.4"

[profile.release]
opt-level ='z'
lto=true
codegen-units=1
panic = 'abort'

